tests/core/error/fts-snippet-6.rq
SELECT (fts:snippet(?u, '>', '<', 2) AS ?snippet) { ?u fts:match "a" }
